--- a/base.css
+++ b/base.css
@@ -1,38 +1,48 @@
-html, body {
-    margin: 0;
+html,
+body {
+  margin: 0;
 }
 body {
-    background-color: #f1f1f1;
-    display: flex;
-    justify-content: center;
+  background-color: #f1f1f1;
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
-    width: 1200px;
-    display: flex;
-    margin: 0 auto;
-    background-color: aquamarine;
+  width: 1200px;
+  display: flex;
+  margin: 0 auto;
+  background-color: #c4c4c4;
 }
 .main {
-    display: flex;
-    flex-flow: column;
-    width: 85%;
+  display: flex;
+  flex-flow: column;
+  width: 85%;
 }
 .menu {
-    width: 15%;
-    background-color: aqua;
-    padding: 10px 20px 0px;
+  width: 15%;
+  background-color: #c4c4c4;
+  padding: 10px 20px 0px;
+}
+.menu img {
+  border-radius: 50%;
 }
 .header {
-    background-color: rgb(5, 108, 108);
-    min-height: 150px;
+  background-color: black;
+  min-height: 150px;
+}
+.header img {
+  display: block;
+  margin: auto;
 }
 .content {
-    background-color: white;
-    min-height: 300px;
-    padding: 20px;
+  background-color: white;
+  min-height: 300px;
+  padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
-    min-height: 150px;
+  background-color: #c4c4c4;
+  min-height: 150px;
+  text-align: center;
+  padding-top: 2rem;
 }
