--- a/contact.css
+++ b/contact.css
@@ -6,13 +6,13 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  width: 100%;
 }
-form {
-  max-width: 500px;
-  text-align: left;
+#contact-form {
+  margin: 0 auto;
+  margin-top: 2rem;
+  width: 400px;
 }
-form label {
+#contact-form label {
   display: block;
   margin: 5px;
 }
